[workspace]
members = [
    "rtos-bootloader",
    "rtos-kernel",
    "rtos",
    "libs/hal",
    "libs/vfs",
    "libs/rtos-framebuffer",
    "drivers/virtio-blk",
    "file-systems/fat32",
    "tools/rtosk-gen",
    "tools/rtosk-inspect"
]
resolver = "2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
