[workspace]
members = [
    "rtos-bootloader",
    "rtos-kernel",
    "rtos",
    "libs/hal",
    "libs/rtos-framebuffer",
    "libs/rtos-types",
    "libs/serial-writer",
    "libs/vfs",
    "libs/x64-utils",
    "drivers/virtio-blk",
    "file-systems/fat32",
    "tools/rtosk-gen",
    "tools/rtosk-inspect"
]
resolver = "2"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
