[package]
name = "rtos-bootloader"
version = "0.1.0"
edition = "2021"

[dependencies]
uefi = { version = "0.35", default-features = false }
panic-abort = "0.3.2"
rtos-types = {path = "../libs/rtos-types"}
rtos-framebuffer = {path = "../libs/rtos-framebuffer"}

[build-dependencies]
nasm-rs = "0.3.1"

[[bin]]
name = "bootx64"
path = "src/main.rs"
test = false
doctest = false
bench = false