[package]
name = "rtos-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
x86_64 = "0.15.2"
lazy_static = { version = "1.4", features = ["spin_no_std"] }
rtos-types = {path = "../libs/rtos-types"}
rtos-framebuffer = {path = "../libs/rtos-framebuffer"}

[build-dependencies]
nasm-rs = "0.3.1"

[[bin]]
name = "rtos-kernel"
path = "src/main.rs"
test = false
doctest = false
bench = false
